Thu Jun  2 14:04:23 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:

          Fix exception macros.

Thu Jun  2 11:06:05 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/examples/ImR/Advanced/TestServer.cpp:

          Add an explicit constructor to work around BCB6 compiler
        warnings about implicit char* to string conversion.

Thu Jun  2 09:10:38 2005  Chris Cleeland  <cleeland_c@ociweb.com>

        * tests/IOR_Endpoint_Hostnames/generate_ior.cpp (main): Added
          explicit OrbId to ORB_init() call to fix errors on emulated
          exception builds.

Thu Jun  2 07:04:11 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Makefile.am:

          Regenerate.

        * orbsvcs/orbsvcs/Svc_Utils.mpc:

          Add svc_utils_export.h to Header File section.

Thu Jun  2 09:19:50 2005  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:

          Exception macro fix. Thanks to jmegq@radiance.com for the
          report and fix. This fixes bug #2135.

Wed Jun  1 14:05:31 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/tests/ImplRepo/run_test.pl:

          Fix the persistent_ir test for unix platforms.

Wed Jun  1 09:26:14 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:

          More fixes for exception macros.

Wed Jun  1 08:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Root_POA.cpp:
          Increment refcount on the servant in the id_to_servant method.

        * tests/POA/Identity/Identity.cpp:
          Use ServantBase_var to store the servant pointer

Wed Jun  1 02:50:28 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * tests/Muxing/Receiver.h:

          Removed inheritance from PortableServer::RefcountServantBase
          since reference is on by default. Please see  "Thu May 26